objects/LLC_BI__Deposit_Request__c.object
<CustomObject>
    <description>The Deposit Object is used to track details of a deposit within nCino</description>
    <fields>
        <fullName>LLC_BI__CESA_Earnings_Amount__c</fullName>
        <description>The portion of the (CESA) transfer that is considered the earnings amount.</description>
        <inlineHelpText>The portion of the (CESA) transfer that is considered the earnings amount.</inlineHelpText>
        <label>CESA Earnings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__CESA_Transfer_Basis_Amount__c</fullName>
        <description>The portion of the (CESA) transfer that is considered the basis amount.</description>
        <inlineHelpText>The portion of the (CESA) transfer that is considered the basis amount.</inlineHelpText>
        <label>CESA Transfer Basis Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Deposit__c</fullName>
        <description>This field is a lookup to the deposit associated to the request</description>
        <label>Deposit</label>
        <referenceTo>LLC_BI__Deposit__c</referenceTo>
        <relationshipLabel>Deposit Request</relationshipLabel>
        <relationshipName>Deposit_Request</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_10_Withholdings_Election__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the IRA owner elects to have 10% Federal income tax withheld from their IRA distribution.</description>
        <inlineHelpText>If true the IRA owner elects to have 10% Federal income tax withheld from their IRA distribution.</inlineHelpText>
        <label>IRA 10% Withholdings Election</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Addtl_Federal_Withholdings_Amt__c</fullName>
        <description>The additional dollar amount (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</description>
        <inlineHelpText>The additional dollar amount (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</inlineHelpText>
        <label>IRA Additional Federal Withholdings Amt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Addtl_Federal_Withholdings_Pct__c</fullName>
        <description>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</description>
        <inlineHelpText>The additional percentage (over and above the 10% Federal income tax withholding) that the IRA owner will have withheld from each distribution.</inlineHelpText>
        <label>IRA Additional Federal Withholdings Pct</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_State_Withholdings_Amount__c</fullName>
        <description>The dollar amount which the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The dollar amount which the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</inlineHelpText>
        <label>IRA State Withholdings Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_State_Withholdings_Percent__c</fullName>
        <description>The percentage that the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</description>
        <inlineHelpText>The percentage that the IRA owner elects to have withheld from their IRA distribution for state income tax purposes.</inlineHelpText>
        <label>IRA State Withholdings Percent</label>
        <precision>14</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>LLC_BI__IRA_Transfer_Source__c</fullName>
        <description>Specifies the source of funds for a transfer to a Traditional or SIMPLE IRA.</description>
        <inlineHelpText>Specifies the source of funds for a transfer to a Traditional or SIMPLE IRA.</inlineHelpText>
        <label>IRA Transfer Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>SIMPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__RMD_Has_Been_Satisfied__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true the required minimum distribution (RMD) has been satisfied for the distribution year.</description>
        <inlineHelpText>If true the required minimum distribution (RMD) has been satisfied for the distribution year.</inlineHelpText>
        <label>RMD Has Been Satisfied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Request_Type__c</fullName>
        <description>Specifies the type of request.</description>
        <inlineHelpText>Specifies the type of request.</inlineHelpText>
        <label>Request Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Transfer</fullName>
                </value>
                <value>
                    <fullName>Direct Rollover</fullName>
                </value>
                <value>
                    <fullName>Funding Distribution</fullName>
                </value>
                <value>
                    <fullName>Conversion</fullName>
                </value>
                <value>
                    <fullName>Recharacterization</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Roth_IRA_Transfer_Source__c</fullName>
        <description>Specifies the source of funds for a transfer or conversion to a Roth IRA.</description>
        <inlineHelpText>Specifies the source of funds for a transfer or conversion to a Roth IRA.</inlineHelpText>
        <label>Roth IRA Transfer Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Roth</fullName>
                </value>
                <value>
                    <fullName>Traditional</fullName>
                </value>
                <value>
                    <fullName>SIMPLE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Transfer_Account_ID__c</fullName>
        <description>The identification number assigned to the account or plan at the transferring financial institution. For recharacterizations, this is the plan/account number of the plan where the original contribution was made that is to be recharacterized and may be at either the same or a third party (&apos;transferor&apos;) financial institution.</description>
        <inlineHelpText>The ID assigned to the account or plan at the transferring financial institution. For recharacterizations, this is the ID number of the plan where the original contribution was made.</inlineHelpText>
        <label>Transfer Account ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Deposit Request</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>DEP-REQ-{000000}</displayFormat>
        <label>Deposit Request Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deposit Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>